cmake_minimum_required(VERSION 2.8)

project(arthurkl)
SET(CMAKE_MODULE_PATH "${arthurkl_SOURCE_DIR}/cmake")
find_package (SDL2)
find_package(SDL_Image)
find_package (SDL_Mixer)
message(SDL2_INClUDE DIR = ${SDL2_INCLUDE_DIR})

SET (ARTHURKL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${ARTHURKL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${SDL_Image_INCLUDE_DIRS} ${SDL_Mixer_INCLUDE_DIRS})
LINK_DIRECTORIES()
message (SDL2_LIBRARY = ${SDL2_LIBRARY})
message (SDL_Image_LIBRARIES = ${SDL_Image_LIBRARIES})

FILE(GLOB_RECURSE ARTHURKL_HEADERS include/*.h)
FILE(GLOB_RECURSE ARTHURKL_SRCS src/*.cpp)

add_executable(${PROJECT_NAME} ${ARTHURKL_SRCS} ${ARTHURKL_HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL_Image_LIBRARIES} ${SDL_Mixer_LIBRARIES})
