cmake_minimum_required(VERSION 2.8)

project(arthurkl)
SET(CMAKE_MODULE_PATH "${arthurkl_SOURCE_DIR}/cmake")
find_package (SDL2)
find_package(SDL_image)
find_package (SDL_mixer)
message(SDL2_INClUDE DIR = ${SDL2_INCLUDE_DIR})

SET (ARTHURKL_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${ARTHURKL_INCLUDE_DIR} ${SDL2_INCLUDE_DIR} ${SDL2_Image_INCLUDE_DIRS} ${SDL2_Mixer_INCLUDE_DIRS})
LINK_DIRECTORIES()
message (SDL2_LIBRARY = ${SDL2_LIBRARY})
message (SDL2_Image_LIBRARIES = ${SDL2_Image_LIBRARIES})

FILE(GLOB_RECURSE ARTHURKL_HEADERS include/*.h)
FILE(GLOB_RECURSE ARTHURKL_SRCS src/*.cpp)

add_executable(${PROJECT_NAME} ${ARTHURKL_SRCS} ${ARTHURKL_HEADERS})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${SDL2_LIBRARY} ${SDL2_Image_LIBRARIES} ${SDL2_Mixer_LIBRARIES})
